app/assets/stylesheets/application.scss
$dark-pink: #ffaaa5;
$light-pink: #ff8b94;
$white: #ffffff;
$shadow-grey: #dddddd;
$black: #111111;


.loginnav {
  display: inline-block;
  float: right;
  background: $dark-pink;
  padding: 20px;
  width: 25%;
  z-index: 99;
  border-radius: 8px;
  margin-right: 20px;
}

.top-bar {
  background: $light-pink;
  box-shadow: 0 -1px 10px 2px $black;
  float: left;
  width: 100%;
  z-index: 1;
}

.name {
  color: $white;
  display: inline-block;
  font-family: 'Pacifico', cursive;
  font-size: 40px;
  font-weight: lighter;
  letter-spacing: 2px;
  padding-left: 50px;
  text-shadow: 5px 5px 5px $black;
}

.login-name {
  background: $light-pink;
  display: inline-block;
  float: right;
  margin: 50px;
}

.field {
  color: $black;
  display: inline-block;
  font-family: Arial;
  font-weight: bold;
  letter-spacing: 1px;
  padding: 10px;
}

.signup-form {
  background: $dark-pink;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
  display: inline-block;
  float: right;
  margin-right: 20px;
  margin-top: 140px;
  padding: 20px;
  text-align: center;
  width: 10%;
}

.image-cropper {
  border: 5px solid $white;
  border-radius: 50%;
  box-shadow: 5px 5px 5px $black;
  height: 100px;
  overflow: hidden;
  position: relative;
  width: 100px;
}

img {
  display: inline;
  height: 100%;
  margin: 0 auto;
  width: auto;
}

body {
  margin: 0;
}

.removed {
  color: $shadow-grey;
  margin-left: 20px;
}

.downvoted {
  color: darken($shadow-grey, 50%);
  margin-left: 20px;
}

.added {
  color: $dark-pink;
  margin-left: 20px;
}

